# LiteJvm

./: CMakeLists.txt  README.md
include/: classloader.h  tipos.h  vmengine.h
src/: classloader.cpp  classviewer.cpp  main.cpp  methodarea.cpp  vmengine.cpp
